--- a/LibraryManagmentSystem.API/appsettings.Development.json
+++ b/LibraryManagmentSystem.API/appsettings.Development.json
@@ -4,5 +4,8 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "ConnectionStrings": {
+    "SqlServer": "Server=localhost;Database=LibraryApi;TrustServerCertificate=true; User Id=SA;Password=strongPassword123"
   }
 }
